case study update

--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -163,17 +163,17 @@
             <div class="Grid-cell">
 
               <div class="element">
-                <h6 class="fontWeight600 textItalic colorYellowVW700"> Current State</h6>
+                <h4 class="fontWeight400">Before</h4>
               </div>
 
               <div class="element">
                 <img class="modal-target" src="diagram_inventory_management_before.svg" alt="Legacy inventory UX">
-                <h5 class="fontWeight600">Category Navigation</h5>
+                <h4 class="fontWeight600">Category Navigation</h4>
                 <h6>Category navigation required restarting each time. No persistent filters. 5 clicks to edit gear.</h6>
 
                 <!-- Trigger -->
                 <a href="#" class="open-modal textUnderline" data-modal="modal1">
-                  <h5 class="fontWeight400">View legacy UX</h5>
+                  <h5 class="fontWeight400">View legacy screenshot</h5>
                 </a>
                 <!-- Modal 1 -->
                 <div id="modal1" class="modal hidden">
@@ -182,7 +182,9 @@
                   </span>
 
                   <div class="modal-content">
-                    <p>This is Modal 1 content.</p>
+                    <h4>Why the Original Inventory Flow Didn’t Scale</h4>
+                    <img src="flow_im_before.png" alt="legacy screens">
+
                   </div>
                 </div>
                 <div class="blankHTiny"></div>
@@ -192,16 +194,16 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <h6 class="fontWeight600 textItalic colorYellowVW700"> Design Update</h6>
+                <h4 class="fontWeight400"> After</h4>
               </div>
               <div class="element">
                 <img class="modal-target" src="diagram_inventory_management_after.svg" alt="Redesigned inventory UX">
-                <h5 class="fontWeight600">Unified Inventory</h5>
+                <h4 class="fontWeight600">Unified Inventory</h4>
                 <h6>Unified view, persistent filters, inline actions. Scaled for high-volume QPs.</h6>
 
                 <!-- Trigger 1 -->
                 <a href="#" class="open-modal textUnderline" data-modal="modal2">
-                  <h5 class="fontWeight400">View new UX</h5>
+                  <h5 class="fontWeight400">View redesigned screenshot</h5>
                 </a>
                 <!-- Modal 2 -->
                 <div id="modal2" class="modal hidden">
@@ -269,6 +271,9 @@
                 </h5>
               </div>
             </div>
+          </div>
+          <div class="element">
+            <a href="#about"> <button class="buttonMedium buttonFlip WhiteBg"> View Case Study </button></a>
           </div>
           <div class="blankHTiny"></div>
         </div>
@@ -371,7 +376,7 @@
             <div class="element">
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BookYourPet B2B Platform Redesign: <a title="View full context, metrics, and case breakdown" class="textUnderline" href="">Onboarding & Subscription</a>, <a title="View full context, metrics, and case breakdown" class="textUnderline" href=""> Booking & Business Operations</a> </h4>
+                  <h4 class="fontWeight400">BookYourPet B2B Platform Redesign</h4>
                   <h5>Led redesign of onboarding and booking flows for pet businesses — from account setup to appointment checkout. Simplified workflows, improved signup completion, and reduced booking friction.
                   </h5>
                 </div>
