--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -147,7 +147,7 @@
             <div class="element">
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400"><a title="View full context, metrics, and case breakdown" class="textUnderline" href="">BabyQuip Inventory Management (Partner Portal)</a></h4>
+                  <h4 class="fontWeight400"><a title="View full context, metrics, and case breakdown" class="textUnderline" href="bq_b2b_inventory_management/">BabyQuip Inventory Management (Partner Portal)</a></h4>
                   <h5>Redesigned the entire inventory control system to scale from hobbyist QPs to power users. Unified navigation, added inline controls, and increased efficiency 3×.</h5>
                 </div>
                 <div class="accIcon align-right"></div>
@@ -214,12 +214,9 @@
                   </span>
                   <div class="modal-content">
                     <h2>New Flow: Flattened for Efficiency & Speed</h2>
-                    <h5>Inline controls, no reloads</h5>
-                    <h5>Full inventory overview</h5>
-                    <h5>Filters stay in place</h5>
-                    <h5>Scalable across product types</h5>
-
-
+                    <h5>Rigid navigation → Inline controls, no reloads</h5>
+                    <h5>Slow edits, hard to scan → Full inventory overview</h5>
+                    <h5>No persistent filters →  Filters stay in place, easy to navigate</h5>
                     <img src="flow_im_after.png" alt="legacy screens">
 
                   </div>
@@ -283,7 +280,7 @@
             </div>
           </div>
           <div class="element">
-            <a href="#about"> <button class="buttonMedium buttonFlip WhiteBg"> View Case Study </button></a>
+            <a href="bq_b2b_inventory_management/"> <button class="buttonMedium buttonFlip WhiteBg"> View Case Study </button></a>
           </div>
           <div class="blankHTiny"></div>
         </div>
@@ -412,7 +409,7 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <h5><a title="View full context, metrics, and case breakdown" class="textUnderline fontWeight500" href="">Onboarding & Subscription</a></h5>
+                <h5><a title="View full context, metrics, and case breakdown" class="textUnderline fontWeight500" href="byp_b2b_subscription">Onboarding & Subscription</a></h5>
                 <h6 class="fontWeight600 textItalic colorYellowVW700">→ Drives conversion</h6>
                 <div class="blankHTiny"></div>
                 <h5><strong>Problem:</strong> Less than 10% of sign-ups activated a subscription. Most churned during setup due to friction—Stripe connection, team setup, and required services blocked trial access.</h5>
